<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/toolbar"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="About"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="80dp"
            app:cardCornerRadius="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:id="@+id/linear"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_margin="@dimen/default_margin"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/test"/>
                    <ImageView
                        android:layout_margin="@dimen/default_margin"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/test"/>
                </LinearLayout>
                <TextView
                    android:textColor="@android:color/black"
                    android:layout_marginTop="24dp"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:layout_below="@id/linear"
                    android:id="@+id/aboutapp"
                    android:text="@string/about_app"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_below="@+id/aboutapp"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:layout_marginVertical="@dimen/activity_vertical_margin"
                    android:id="@+id/aboutapp_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/this_app"
                    android:textSize="20sp"/>
                <TextView
                    android:textColor="@android:color/black"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="24dp"
                    android:layout_below="@id/aboutapp_desc"
                    android:id="@+id/developer"
                    android:text="@string/developer"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_below="@+id/developer"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:layout_marginVertical="@dimen/activity_vertical_margin"
                    android:id="@+id/developer_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/developer_student_clubs_chapter_unikom"/>
                <TextView
                    android:textColor="@android:color/black"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="40dp"
                    android:layout_below="@id/developer_desc"
                    android:id="@+id/shareapp"
                    android:text="@string/shareapp"
                    android:textStyle="bold"
                    android:textSize="24sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_below="@+id/shareapp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_margin="@dimen/default_margin"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/test"/>
                    <ImageView
                        android:layout_margin="@dimen/default_margin"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/test"/>
                    <ImageView
                        android:layout_margin="@dimen/default_margin"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:scaleType="centerCrop"
                        android:src="@drawable/test"/>
                </LinearLayout>

            </RelativeLayout>
        </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>